@@ -9,6 +9,8 @@ VERSION 2.7
     * Removed alpha state and not really working spectrum analyzer applet.
 
   BUGFIXES:
+    * Fix hangs and inappropriate messages when trying to play a track from
+      a saved playlist that has been deleted in the mean time. (BR 308371)
     * Fix existing files preventing complete transfer of tracks to collection. (BR 312001)
     * Fix crash then doing Last.fm love with uninitialized Last.fm plugin. (BR 311857)
     * Fix Last.fm streams not being correctly recreated on startup. (BR 305576)
